manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vm-console-proxy
  labels:
    control-plane: vm-console-proxy
    name: vm-console-proxy
spec:
  selector:
    matchLabels:
      control-plane: vm-console-proxy
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: vm-console-proxy
        name: vm-console-proxy
    spec:
      serviceAccountName: vm-console-proxy
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - command:
            - /console
          imagePullPolicy: Always
          args: []
          image: console:latest
          name: console
          ports:
            - name: api
              protocol: TCP
              containerPort: 8768
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          volumeMounts:
            - name: "vm-console-proxy-cert"
              mountPath: "/tmp/vm-console-proxy-cert"
              readOnly: true
            - name: "kubevirt-virt-handler-certs"
              mountPath: "/etc/virt-handler/clientcertificates"
              readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
        - name: "vm-console-proxy-cert"
          secret:
            secretName: "vm-console-proxy-cert"
        - name: "kubevirt-virt-handler-certs"
          secret:
            secretName: "kubevirt-virt-handler-certs"
