manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vm-console-proxy
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: vm-console-proxy-cert
spec:
  ports:
    - port: 80
      targetPort: api
  selector:
    vm-console-proxy.kubevirt.io: vm-console-proxy
