manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vm-console
spec:
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: vm-console-proxy
  wildcardPolicy: None
